# ai-platform

./: .gitignore  .pep8  AI Platform Overview.drawio  ai_platform_overview.drawio  ai_platform_overview_simple.drawio  logo_big.tiff  pyproject.toml  readme.md  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer copy.json  devcontainer.json  docker-compose.yml
data/brains/: brains.json  brains.json.jinja
data/chains/: chains.json
data/chroma/: chroma.sqlite3
data/test_data/: brains.json  brains.json.jinja  brains_with_no_default.json  rectus_abdominus.txt  test_template.json.jinja  wikipedia_peru.txt
data/test_data/documents_to_chunk/: wikipedia_berlin.json
src/: start_backend.sh  test.sh
src/ai_brain/: api_routes.py  brain.py  brain_api_routes.py  brain_info_model.py  brain_scraper.py  brain_scraper_factory.py  brain_scraper_wikipedia.py  chunker.py  chunker_char_text_splitter.py  chunker_factory.py  embedding_function_factory.py  indexer.py  main.py
src/ai_brain_client/: ai_brain_client.py
src/ai_brain_client_tests/: test_ai_brain_client.py
src/ai_brain_importer/: ai_brain_importer.py  ai_brain_importer_wikipedia.py  brain_importer_factory.py
src/ai_brain_importer_tests/: test_wikipedia_importer.py
src/ai_brain_loader_tests/: test_wikipedia_loader.py
src/ai_brain_loader_wikipedia_test/: test_wikipedia_loader.py
src/ai_brain_loaders/: ai_brain_loader_wikipedia.py
src/ai_brain_tests/: test_brain.py  test_brain_manager.py  test_brain_search.py  test_chunker.py  test_scraper_wikipedia.py
src/ai_chains/: chain.py  chain_api_routes.py  chain_factory.py  main.py
src/ai_chains_tests/: test_ai_chains.py
src/ai_cli/: brain  test_cli.py
src/ai_commons/: apiModelsChat.py  apiModelsLlm.py  apiModelsSearch.py  api_models.py  constants.py  inner_working.py
src/ai_commons_tests/: test_.py  test_chunk.py  test_document.py
src/ai_orchestration/: ai_orchestrator.py  api_routes.py  chain.py  main.py  rag_chain.py  simple_chat.py
src/ai_ui/: babel.config.cjs  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json
src/ai_ui/src/: constants.tsx  index.css  index.tsx
src/ai_ui_a12/: jest.config.js  package-lock.json  package.json  package.json.bak  tsconfig.json
src/ai_ui_a12/public/: index.html  manifest.json
src/ai_ui_a12/src/: App.test.tsx  (+6 more)
src/ai_workspace/: chunker.py  constants.py  main.py  workspace.py  workspace_client.py
src/ai_workspace_test/: test_chunker.py
src/ai_workspace_tests/: test_chunker.py
src/data/: _index.json
src/llm_wrapper/: llm_api_routes.py  llm_wrapper_factory.py  main.py  ollamaWrapper.py  readme.md
src/llm_wrapper_client/: llm_client.py
src/llm_wrapper_client_tests/: test_llm_wrapper_client.py
src/llm_wrapper_tests/: test_llm_wrapper.py
src/prompt_lib/: prompt_templates.py  prompts.py
src/prompt_lib_tests/: test_prompt_lib.py
src/utils/: dict2file.py  dict2object.py  fire_dict.py  flatten_files.py  html2markdown_file.py  robust_jsonify.py  simplify_dict.py  sub_modules.py  utils.py
src/utils_tests/: base_fastapi_test.py  test_dict2file.py  test_utils.py
(+100 files in other folders)
